# game-engine

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  minster.html
assets/materials/: cube.mtl  default.mtl  minster-road.mtl  skull.mtl
src/: lib.rs  webgl_render.rs  webgl_viewport.rs  webpage.rs
src/components/: ambient.rs  buffer_data.rs  camera.rs  clear_color.rs  coloring.rs  diffuse.rs  dimensions.rs  directional_light.rs  file_content.rs  file_to_load.rs  geometry.rs  geometry_group.rs  image.rs  image_to_load.rs  inverse_world_transform.rs  local_transform.rs  material.rs  mod.rs  model_group.rs  models_to_load.rs  name.rs  normals.rs  point_light.rs  projection_transform.rs  scene_parent.rs  shininess.rs  specular.rs  tex_coords.rs  texture.rs  transform.rs  viewport.rs  webgl_buffer.rs  webgl_texture.rs  world_transform.rs
src/game/: mod.rs
src/game_loop/: mod.rs
src/program/: mod.rs
src/render/: mod.rs
src/render/buffer/: mod.rs
src/render/feed/: mod.rs
src/render/program/: mod.rs
src/render/shader/: fragment.rs  mod.rs  vertex.rs
src/render/viewport/: mod.rs
src/resources/: active_config.rs  browser_window.rs  clear_color.rs  fragment_shaders.rs  game_timing.rs  html_canvas.rs  keyboard.rs  mod.rs  model_groups.rs  name_index.rs  shader_config.rs  shader_locations.rs  shader_programs.rs  timing.rs  vertex_shaders.rs  webgl_context.rs  window.rs
src/shader/: default.frag  default.vert  mod.rs
src/systems/: animation.rs  coloring_default.rs  file_loader.rs  group_expander.rs  hierarchy.rs  image_loader.rs  inverse_world.rs  keyboard_input.rs  location_lookup.rs  material_default.rs  mod.rs  model_loader.rs  model_preloader.rs  name_indexer.rs  panic_to_console.rs  scene_graph.rs  scene_loader.rs  shader_compiler.rs  texcoords_default.rs  texture_default.rs  use_program.rs  vertex_normals.rs  webgl_buffer.rs  webgl_program.rs  webgl_render.rs  webgl_shader.rs  webgl_texture.rs
src/ticker/: mod.rs
src/utilities/: blank_texture.rs  debugging.rs  event_handlers.rs  game_loop.rs  mod.rs  test_helpers.rs
src/utilities/matrix4f/: convert.rs  inverse.rs  look_at.rs  mod.rs  multiply.rs  orthographic.rs  perspective.rs  position.rs  rotate.rs  scale.rs  test.rs  translate.rs
src/utilities/shader/: config.rs  generate.rs  mod.rs
src/utilities/triangle/: area.rs  mod.rs  surface_normal.rs
src/utilities/vector3f/: add.rs  angle.rs  convert.rs  cross.rs  dot.rs  length.rs  mod.rs  normalize.rs  scale.rs  subtract.rs  surface_normal.rs
src/viewport/: mod.rs
src/webgl_buffer/: mod.rs
src/webgl_program/: mod.rs
src/webpage/: mod.rs
