[package]
name = "minimal-rust-wasm"
description = "An extremely minimal Rust + WASM example."
repository = "https://github.com/tuzz/minimal-rust-wasm"
version = "0.1.0"
license = "MIT"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dev-dependencies]
assert_approx_eq = "1.1.0"

[dependencies]
wasm-bindgen = "0.2.42"
js-sys = "0.3.27"
specs-derive = "0.4.0"
shred-derive = "0.6.1"
impl_ops = "0.1.1"

[dependencies.specs]
version = "0.15.0"
default-features = false

[dependencies.web-sys]
version = "0.3.19"
features = [
  'Document',
  'DomRect',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'Node',
  'Performance',
  'Text',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]
