[package]
name = "game-engine"
description = "A project for me to explore writing a game engine from scratch."
repository = "https://github.com/tuzz/game-engine"
version = "0.1.0"
license = "MIT"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dev-dependencies]
assert_approx_eq = "1.1.0"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.42"
js-sys = "0.3.27"
specs-hierarchy = "0.5.1"
specs-derive = "0.4.0"
shred-derive = "0.6.1"
impl_ops = "0.1.1"
tobj = "0.1.10"

[dependencies.specs]
version = "0.15.0"
default-features = false

[dependencies.web-sys]
version = "0.3.19"
features = [
  'Document',
  'DomRect',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'KeyboardEvent',
  'Node',
  'Performance',
  'Response',
  'Text',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]
